# SettingsDialog

./: CMakeLists.txt  README.md
include/: ISettingsPage  SettingsDialog
includes/: ISettingsPage.h  SettingsDialog.h  SettingsDialogSpec.h
includes/SettingsDialog/: ISettingsPage.h  SettingsDialog.h  SettingsDialogSpec.h
src/: ISettingsPage.h  MacHelper.h  MacHelper.mm  SeparatorWidget.cpp  SeparatorWidget.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialogSpec.h  ThemeSupport.h  ThemeSupport.mm  TransparentWidget.cpp  TransparentWidget.h
